--- a/src/components/header/navbar.css
+++ b/src/components/header/navbar.css
@@ -79,8 +79,7 @@ a{
     transition: 0.4s ease-in-out;
 }
 .nav-buttons:hover{
-    width: 6.7rem;
-    height: 2.7rem;
+    transform: scale(1.05);
 }
 
 .nav-icon{
