--- a/src/containers/CartContainer/CartContainer.css
+++ b/src/containers/CartContainer/CartContainer.css
@@ -6,5 +6,62 @@
 
 .cart-item-container{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.add-position{
+    display: grid;
+    place-content: center;
+    height: 70vh;
+}
+
+.button-products{
+    color: white;
+    font-size: 20px;
+    padding: 10px 15px;
+    border: 1px solid #f1f1f1;
+    box-shadow: 1px 1px 3px black;
+    background: linear-gradient(to right, #a6b2ec, #3f0071);
+    border-radius: 20px;
+    transition: 0.3s;
+    cursor: pointer;
+}
+
+.button-products:hover{
+    box-shadow: 1px 2px 4px black;
+    transform: scale(1.03);
+}
+
+.cart-info{
+    width: 70%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.cart-info-quantity{
+    font-size: 20px;
+}
+
+.cart-info-button{
+    color: white;
+    font-size: 15px;
+    padding: 10px 15px;
+    height: fit-content;
+    background: brown;
+    border: 1px solid black;
+    box-shadow: 1px 1px 3px black;
+    cursor: pointer;
+    border-radius: 10px;
+    transition: 0.3s;
+}
+
+.cart-info-button:hover{
+    box-shadow: 1px 2px 4px black;
+    transform: scale(1.04);
+}
+
+.cart-info-total{
+    font-size: 20px;
 }
