--- a/src/containers/FormContainer/FormContainer.css
+++ b/src/containers/FormContainer/FormContainer.css
@@ -1,5 +1,6 @@
-.cart-container{
+.form-container-position{
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
 }
