--- a/src/components/LoginAndRegister/Login.css
+++ b/src/components/LoginAndRegister/Login.css
@@ -1,3 +1,9 @@
+.login-background{
+    width: 100%;
+    height: 100vh;
+    background: #a6b2ec;
+}
+
 .recuperar-contraseña{
     margin-top: 1rem;
     color: lightblue;
@@ -204,14 +210,14 @@
     align-items: center;
 }
 
-.login-button{
+.register-button{
     color: #3f0071;
     background: #fff;
     border: 1px solid #8403f2;
     border-radius: 2px;
     font-size: 15px;
     font-weight: bold;
-    width: 100px;
+    width: 120px;
     height: 30px;
     display: flex;
     justify-content: center;
