--- a/src/components/LoginAndRegister/Register.css
+++ b/src/components/LoginAndRegister/Register.css
@@ -1,3 +1,9 @@
+.register-background{
+    width: 100%;
+    height: 100vh;
+    background: #a6b2ec;
+}
+
 .register-box {
     position: absolute;
     top: 50%;
@@ -202,7 +208,7 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    align-items: baseline;
+    align-items: center;
     margin: 1rem 0;
 }
 
@@ -213,7 +219,7 @@
     border-radius: 2px;
     font-size: 15px;
     font-weight: bold;
-    width: 100px;
+    width: 80px;
     height: 30px;
     display: flex;
     justify-content: center;
@@ -225,34 +231,4 @@
 .login-button:hover{
     transform: scale(1.05);
     background: #f1f1f1;
-}
-
-.google-register{
-    margin: 1rem 0;
-    font-size: 18px;
-    font-weight: bold;
-    width: 100%;
-    height: 40px;
-    border-radius: 10px;
-    cursor: pointer;
-    border: 2px solid black;
-    transition: 00.3s;
-}
-
-.github-register{
-    color: white;
-    background: rgb(29, 29, 29);
-    font-size: 18px;
-    font-weight: bold;
-    width: 100%;
-    height: 40px;
-    border-radius: 10px;
-    cursor: pointer;
-    border: 2px solid white;
-    transition: 00.3s;
-}
-
-.google-register:hover,
-.github-register:hover{
-    transform: scale(1.03);
 }
