--- a/src/containers/CartContainer/CartProducts/CartProducts.css
+++ b/src/containers/CartContainer/CartProducts/CartProducts.css
@@ -1,17 +1,54 @@
-.cart-item-container{
+.cart-item-container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 70%;
+    padding: 10px;
+    border-radius: 5px;
+    width: 60%;
+    background: #fff;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+    border: 1px solid black;
+    overflow-y: auto;
 }
 
+.cart-item-container::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
 
-.add-position{
+.cart-item-container::-webkit-scrollbar-thumb {
+    background: #ccc;
+    border-radius: 5px;
+}
+
+.cart-item-container::-webkit-scrollbar-thumb:hover {
+    background: #b3b3b3;
+    box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.cart-item-container::-webkit-scrollbar-thumb:active {
+    background-color: #999999;
+}
+
+.cart-item-container::-webkit-scrollbar-track {
+    background: #e1e1e1;
+    border-radius: 4px;
+    padding: 20px;
+}
+
+.cart-item-container::-webkit-scrollbar-track:hover,
+.cart-item-container::-webkit-scrollbar-track:active {
+    background: #d4d4d4;
+}
+
+.add-position {
     display: grid;
     place-content: center;
     height: 70vh;
 }
 
-.button-products{
+.button-products {
     color: white;
     font-size: 20px;
     padding: 10px 15px;
@@ -23,22 +60,29 @@
     cursor: pointer;
 }
 
-.button-products:hover{
+.button-products:hover {
     box-shadow: 1px 2px 4px black;
     transform: scale(1.03);
 }
 
-.cart-info{
+.cart-info {
     width: 70%;
     display: flex;
     justify-content: space-between;
 }
 
-.cart-info-quantity{
+.cart-info-quantity {
     font-size: 20px;
 }
 
-.cart-info-button{
+.cart-buttons-position{
+    display: flex;
+    justify-content: flex-end;
+    width: 70%;
+    margin-bottom: 1rem;
+}
+
+.cart-info-button {
     color: white;
     font-size: 15px;
     padding: 10px 15px;
@@ -47,15 +91,32 @@
     border: 1px solid black;
     box-shadow: 1px 1px 3px black;
     cursor: pointer;
-    border-radius: 10px;
+    border-radius: 5px;
     transition: 0.3s;
 }
 
-.cart-info-button:hover{
+.cart-info-button:hover {
     box-shadow: 1px 2px 4px black;
     transform: scale(1.04);
 }
 
-.cart-info-total{
+.finalizar-compra{
+    color: #fff;
+    font-size: 15px;
+    background: linear-gradient(to left, #a6b2ec, #3f0071);
+    border: 1px solid black;
+    padding: 10px;
+    border-radius: 5px;
+    margin-left: 10px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.finalizar-compra:hover{
+    box-shadow: 1px 2px 4px black;
+    transform: scale(1.04);
+}
+
+.cart-info-total {
     font-size: 20px;
 }
