--- a/src/containers/UserContainer/UserProducts.css
+++ b/src/containers/UserContainer/UserProducts.css
@@ -1,9 +1,10 @@
 .product-buyed{
+    height: 130px;
     background: #fff;
     display: flex;
     justify-content: space-between;
     border-radius: 5px;
-    margin: 0 10px;
+    margin: 15px;
     box-shadow: 1px 1px 4px 1px black;
 }
 
@@ -12,10 +13,11 @@
     padding: 0 10px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .product-buyed-content h3{
+    font-size: 20px;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -30,8 +32,7 @@
 
 .product-buyed img{
     margin: 5px;
-    width: 10%;
-    height: fit-content;
+    width: fit-content;
     border-radius: 5px;
 }
 
