--- a/src/containers/CartContainer/CartProducts/CartProducts.css
+++ b/src/containers/CartContainer/CartProducts/CartProducts.css
@@ -100,7 +100,7 @@
     transform: scale(1.04);
 }
 
-.finalizar-compra{
+.direccionar-form{
     color: #fff;
     font-size: 15px;
     background: linear-gradient(to left, #a6b2ec, #3f0071);
